# OmniDrive

./: .gitignore  .gitmodules  main.py  pyproject.toml  setup.md
docs/: architecture.md
scripts/: extract.sh
