[project]
name = "omnidrive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.10"
dependencies = [
    "torch==1.13.1+cu117",
    "torchvision==0.14.1+cu117",
    "torchaudio==0.13.1",
    "flash-attn==2.5.6",
    "transformers==4.31.0",
    "mmcv-full==1.7.0",
    "mmdet==2.28.2",
    "mmsegmentation==0.30.0",
    "openmim>=0.3.9",
    "mmdet3d",
    "openlanev2",
    "setuptools==59.5.0",
    "numpy==1.23.4",
    "accelerate",
]

# 1. Define the custom PyTorch index
[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

# 2. Tell uv to fetch PyTorch packages exclusively from the custom index above
[tool.uv.sources]
torch = { index = "pytorch-cu117" }
torchvision = { index = "pytorch-cu117" }
torchaudio = { index = "pytorch-cu117" }
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.5.6/flash_attn-2.5.6+cu118torch1.13cxx11abiTRUE-cp39-cp39-linux_x86_64.whl" }
mmdet3d = { path = "./mmdetection3d", editable = true }
openlanev2 = { path = "./OpenLane-V2", editable = true }

[tool.uv.extra-build-dependencies]
mmdet3d = ["torch", "setuptools<82"]

# 3. Add the HTML directory find-links for MMCV
[tool.uv]
find-links = [
    "https://download.openmmlab.com/mmcv/dist/cu117/torch1.13/index.html"
]
