[project]
name = "omnidrive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.10"
dependencies = [
    "torch==2.0.0+cu118",
    "torchvision==0.15.1+cu118",
    "torchaudio==2.0.1",
    "flash-attn==2.5.6",
    "transformers==4.31.0",
    "mmcv-full==1.7.2",
    "mmdet==2.28.2",
    "mmsegmentation==0.30.0",
    "openmim>=0.3.9",
    "mmdet3d",
    "openlanev2",
    "setuptools==59.5.0",
    "numpy==1.23.4",
    "accelerate",
    "peft>=0.12,<0.13",
    "sentencepiece>=0.2.1",
]

# 1. Define the custom PyTorch index
[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

# 2. Tell uv to fetch PyTorch packages exclusively from the custom index above
[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.5.6/flash_attn-2.5.6+cu118torch2.0cxx11abiFALSE-cp39-cp39-linux_x86_64.whl" }
mmdet3d = { path = "./mmdetection3d", editable = true }
openlanev2 = { path = "./OpenLane-V2", editable = true }

[tool.uv.extra-build-dependencies]  
mmdet3d = ["torch", "setuptools<82"]

# 3. Add the HTML directory find-links for MMCV
[tool.uv]
find-links = [
    "https://download.openmmlab.com/mmcv/dist/cu118/torch2.0/index.html"
]
